Problèmes: string can't be convert to Datetime

--- a/templates/profil/index.html.twig
+++ b/templates/profil/index.html.twig
@@ -351,15 +351,14 @@
                     <div class="ex-block mb-head ex-block-right">
                         <div class="marker-head"><i class="fa fa-briefcase"></i></div>
                         <div class="ex-content b-r">
-                            <h3>Work Experiense</h3>
+                            <h3>Work Experience</h3>
                         </div>
                     </div>
                     <div class="ex-block ex-block-left">
                         <div class="marker"></div>
                         <div class="ex-content ex-shadow">
-                            <h4>UI/UX - Abc Inc</h4> <span>May-June 2017</span>
-                            <p> Believe it or not its just me. Texas tea. Come and knock on our door. We've been
-                                waiting for you where are herhers and his. Three's company too. </p>
+                            <h4>{{ resumeTitle.title }}</h4> <span>{{ resume.beginDate }} - {{ resume.endDate }}</span>
+                            <p> {{ resume.details }}</p>
                         </div>
                     </div>
                     <div class="ex-block ex-block-right">
