--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,7 +14,7 @@
         {% endblock %}
     </head>
     <body>
-        <div class="container">
+        <div class="">
             {% block body %}{% endblock %}
         </div>
         {% block javascripts %}
